# Azas

./: .gitignore  AGENTS.md  COMMANDS.md  CONTRIBUTING.md  README.md  package.xml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
dependencies/: README.md  dsr_deeptree_sources.repos  experimental_sources.repos  python_optional_requirements.txt  ros2_sources.repos  system_apt_packages.txt
docs/: anygrasp_integration.md  camera_connection_verification_2026-05-11.md  control_readiness_audit.md  cup_dataset_and_detection.md  current_handoff_2026-05-11.md  developer_orientation.md  dsr_deeptree_integration.md  field_control_runbook.md  field_execution_commands.md  frames.md  full_cocktail_workflow_plan.md  grasp_detector_adapter.md  oss_robot_control_stack.md  project_gap_audit.md  real_motion_measurement_worksheet.md  real_robot_test_ladder.md  recovery_after_poweroff.md  repository_file_map.md  rviz_simulation_verification_2026-05-11.md  safety_checklist.md  simulation_and_connection_plan.md  tf_debug_checklist.md  tumbler_dispenser_models.md
docs/onboarding/: 01-quickstart-kor.md  02-role-map-kor.md
docs/reference/: command-taxonomy.md
jarvis/: dispenser_press_node.py
launch/: dispenser_press.launch.py
models/: README.md  azas_models.mtl  azas_tumbler_dispenser_preview.usda
src/azas_bringup/: package.xml  setup.cfg  setup.py
src/azas_bringup/azas_bringup/: joint_state_relay_legacy.py
src/azas_bringup/config/: calibration.yaml  perception.yaml  safety.yaml
src/azas_bringup/launch/: bar_sort_node_legacy.launch.py  click_pick_node_legacy.launch.py  cocktail_dryrun.launch.py  collision_obstacle_legacy.launch.py  gear_assembly_legacy.launch.py  gpd_grasp_adapter.launch.py  grounded_sam2_full_vision_to_floor_place.launch.py  grounded_sam2_perception.launch.py  grounded_sam2_to_floor_place.launch.py  hardware_free_demo.launch.py  mp_basic_legacy.launch.py  mp_waypoint_legacy.launch.py  mp_waypoint_pilz_legacy.launch.py  mp_waypoint_pilz_lin_legacy.launch.py  mvp_bringup.launch.py  pick_and_place_legacy.launch.py  realsense_data_collector_legacy.launch.py  robot_connection_control.launch.py  simulated_cup_grasp_dryrun.launch.py  stt_pick_and_place_legacy.launch.py  stt_robot_control_legacy.launch.py  syrup_pump_press_legacy.launch.py  yolo_cup_pick_node_legacy.launch.py  yolo_perception.launch.py  yolo_to_floor_place.launch.py
src/azas_bringup/rviz/: azas_dispenser_sequence.rviz
src/azas_calibration/: package.xml  setup.cfg  setup.py
src/azas_calibration/azas_calibration/: calibration_loader_node.py  calibration_test_legacy.py  eye2hand_calibration_legacy.py  handeye_calibration_legacy.py
src/azas_gripper/: package.xml  setup.cfg  setup.py
src/azas_gripper/azas_gripper/: onrobot.py  rg2_gripper_node.py
src/azas_interfaces/: CMakeLists.txt  package.xml
src/azas_interfaces/action/: PickAndAlign.action
src/azas_interfaces/msg/: CupDetection.msg  CupPose.msg  GraspCandidate.msg  GraspCandidateArray.msg  README.md
src/azas_interfaces/srv/: CalibrateOutlet.srv  SaveCupOffset.srv  SetGripper.srv
src/azas_motion/: package.xml  setup.cfg  setup.py
src/azas_motion/azas_motion/: alignment.py  alignment_executor_node.py  dispenser_sequence_preview_node.py  gear_assembly_legacy.py  mp_waypoint_pilz_legacy.py  side_grasp_ik_preview_node.py  syrup_pump_press_legacy.py
src/azas_motion/test/: test_alignment.py
src/azas_perception/: package.xml  setup.cfg  setup.py
src/azas_perception/azas_perception/: bar_sort_legacy_node.py  click_pick_legacy_node.py  cup_detection_pose_bridge_node.py  depth_projection.py  external_grasp_adapter_node.py  gpd_grasp_adapter_node.py  grounded_sam2_mask_detector_node.py  grounded_sam2_tumbler_mask_node.py  simulated_cup_detection_node.py  tumbler_detector_node.py  yolo_cup_pick_legacy_node.py  yolo_tumbler_detector_node.py
src/azas_perception/test/: test_depth_and_detection_logic.py  test_lesson21_sensor_config.py
src/azas_task_manager/: package.xml  setup.cfg  setup.py
src/azas_task_manager/azas_task_manager/: cocktail_dryrun_sequence_node.py  cocktail_workflow_plan.py  pick_and_align_action_server.py
src/azas_voice/: package.xml  setup.cfg  setup.py
src/azas_voice/azas_voice/: command_parser.py  llm_recipe_mapper_node.py  recipe_catalog.py  recipe_mapper_node.py  stt_node.py  stt_pick_and_place_legacy.py
src/azas_voice/config/: recipes.yaml
src/azas_voice/launch/: azas_voice.launch.py
src/azas_voice/test/: test_command_parser.py  test_llm_recipe_mapper.py
src/dsr_practice/: setup.py
src/gpd_ros/: CMakeLists.txt  package.xml
src/gpd_ros/msg/: GraspConfig.msg  GraspConfigList.msg
tools/: README.md  animate_gazebo_shake_preview.sh  auto_label_yolo_cups.py  check_cocktail_workflow_plan.py  check_connection_stage.sh  check_cup_orientation_heuristic.py  check_cup_pick_backends.sh  check_depth_projection_sample.sh  check_grasp_adapter_contract.py  check_grasp_readiness.sh  check_hand_eye_readiness.sh  check_live_hardware_gates.sh  check_observe_pose_planning_only.sh  check_side_grasp_planning_only.sh  check_static_cup_lid_dataset.py  check_tf_pipeline.sh  explain_real_robot_blockers.sh  export_grasp_frame.py  fake_hardware_services.py  field_no_motion_report.sh  generate_tumbler_dispenser_models.py  robot_connection_acceptance.sh  run_code_only_cup_grasp_dryrun.sh  run_doosan_real_no_motion_m0609.sh  run_observe_cup_pose_only.py  run_robot_real.sh  run_supervised_observe_pose.py  run_supervised_real_single_cup_pick.py  set_motion_hold.sh  smoke_cocktail_dryrun_sequence.py  smoke_cocktail_dryrun_sequence.sh  smoke_control_path.sh  smoke_dispense_lid_sequence.sh  smoke_fake_hardware_path.sh  smoke_real_motion_config_gate.sh  smoke_real_motion_entrypoint_gates.sh  smoke_robot_connection_acceptance_gate.sh  smoke_stage_execution_modes.sh  sweep_side_grasp_planning_candidates.py  tumbler_dispenser_m0609_preview.world
tools/checks/: README.md  check_cocktail_workflow_plan.py  check_connection_stage.sh  check_cup_lid_sequence.sh  (+18 more)
(+76 files in other folders)
