<?xml version="1.0"?>
<package format="3">
  <name>azas_calibration</name>
  <version>0.0.1</version>
  <description>Calibration loaders and services for camera, dispenser_outlet, and cup offsets.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>azas_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
