<?xml version="1.0"?>
<package format="3">
  <name>azas_gripper</name>
  <version>0.0.1</version>
  <description>RG2 gripper service boundary for Azas.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>azas_interfaces</depend>
  <exec_depend>python3-pymodbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
