<?xml version="1.0"?>
<package format="3">
  <name>azas_motion</name>
  <version>0.0.1</version>
  <description>MoveItPy motion and dispenser alignment skeleton for Azas.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>azas_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

