<?xml version="1.0"?>
<package format="3">
  <name>azas_motion</name>
  <version>0.0.1</version>
  <description>MoveItPy motion and dispenser alignment skeleton for Azas.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>azas_interfaces</depend>
  <exec_depend>dsr_moveit_config_m0609</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
