<?xml version="1.0"?>
<package format="3">
  <name>azas_perception</name>
  <version>0.0.1</version>
  <description>Depth projection and tumbler pose skeleton for Azas.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>azas_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
