<?xml version="1.0"?>
<package format="3">
  <name>azas_task_manager</name>
  <version>0.0.1</version>
  <description>PickAndAlign action orchestration for Azas MVP-1.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>azas_interfaces</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
