<?xml version="1.0"?>
<package format="3">
  <name>azas_voice</name>
  <version>0.0.1</version>
  <description>STT and symbolic cocktail recipe mapping for Azas.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
