<?xml version="1.0"?>
<package format="3">
  <name>gpd_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 message mirror for the ROS 1 atenpas/gpd_ros bridge boundary.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
